Updated html boilerplate

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Under construction
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Aaron Fox</title>
+  </head>
+  <body>
+    <p>Under Construction</p>
+  </body>
+</html>
