--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Aaron Fox</title>
   </head>
   <body>
-    <p>Under Construction</p>
+    <p>Hi There! You might want to visit <a href="aaronfox.me">aaronfox.me</a>!</p>
   </body>
 </html>
