--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Aaron Fox</title>
+    <style type="text/css">
+        body {
+            background-color: lightpink;
+        }
+    </style>
   </head>
   <body>
     <p>Hi There! You might want to visit <a href="aaronfox.me">aaronfox.me</a>!</p>
