--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </style>
   </head>
   <body>
-    <p>Hi There! You might want to visit <a href="aaronfox.me">aaronfox.me</a>!</p>
+    <p>Hi There! You might want to visit <a href="http://www.aaronfox.me">aaronfox.me</a>!</p>
   </body>
 </html>
